[package]
name = "oyster-storage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp"] }
chrono = "0.4.23"
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"]}
rslock = "0.1.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
actix-web = "4"
derive_more = "0.99.0"

