[package]
name = "oyster-storage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp"] }
chrono = "0.4.23"
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"]}
rslock = "0.1.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
actix-web = "4"
hyper = { version = "0.14.23", features = ["http1", "http2", "tcp", "server"] }
derive_more = "0.99.0"
confy = "0.5.1"
serde_derive = "1.0.160"
route-recognizer = "0.3"
bytes = "1.4"
async-trait = "0.1.68"
http = "0.2.9"
oyster-sdk = { git = "https://github.com/marlinprotocol/oyster-sdk-rs.git" }

